...
    <TextView
        android:id="@+id/membershipPersonDisplayNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/person_display_name"
        app:layout_constraintBottom_toBottomOf="@id/membershipPersonDisplayNameTextView"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/membershipPersonDisplayNameTextView"
        tools:ignore="RtlSymmetry" />

    <TextView
...
