...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/size_8dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/iv_messaging"
                        android:layout_width="@dimen/icon_size_normal"
                        android:layout_height="@dimen/icon_size_normal"
                        android:background="@drawable/circle_filled_blue"
                        android:src="@drawable/ic_message"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
...
