<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootWebhookCreateDialog"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/targetUrlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_target_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/resourceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_resource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetUrlEditText"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/eventEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resourceEditText"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/filterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditText"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/secretEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/webhook_secret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterEditText"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/alphaWhite"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>