<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootListItemLayout"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="false"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16sp"
            tools:text="Name"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_12sp"
            tools:text="Path"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:maxLines="2"/>
    </LinearLayout>
</RelativeLayout>